Trying to get routing working

--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -1,5 +1,6 @@
 <html>
     <body>
+      {{!-- {{>header}} --}}
       <h1>{{db_result.heading}}</h1>
       <h1>{{time}}</h1>
       <p>Make this a login/ signup page.. could add middleware inside route to redirect if already logged in???</p> 
