--- a/functions/views/partials/includes/header.hbs
+++ b/functions/views/partials/includes/header.hbs
@@ -4,4 +4,4 @@ head
     script
         include ../../public/scripts/script.js
     style
-        include ../../public/styles/styles.css
+        include ../../../../public/styles.css
