feat: labelling form added

--- a/functions/views/pages/ingredients/add-ingredients.pug
+++ b/functions/views/pages/ingredients/add-ingredients.pug
@@ -1,15 +1,9 @@
 extends ../../partials/layouts/layout
 
 block content  
-  h1 Logout
+  h1 Add Ingredients
   if message
-  h2= message
+    h2= message
   div
-    form(id='form')
-      label(for='file') Image
-      input(id='file',type='file',value='',placeholder='', name='file' accept="image/*")
-      input(id="convertAndUpload" type='submit',value='Identify')
-
-    p
-    | Don't have an account?
-    a(href="./signup") Sign up now
+    input(id='file',type='file',value='',placeholder='', name='file' accept="image/*")
+  div#foodLabels
