--- a/functions/views/partials/layouts/layout.pug
+++ b/functions/views/partials/layouts/layout.pug
@@ -2,16 +2,22 @@ doctype html
 html
   head
     title Recipes
+    //- local dev
     script(src='../../../script.js')
     link(href='../../../styles.css', rel='stylesheet' Content-Type='text/css')
-    //- DEPLOY MAY REQUIRE CHANGING THE VALUES BACK TO JUST script.js and styles.css without the dots!!
-    //- ANOTHER JOY OF FIREBASE!!!!!!!!!
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    //- hosted
     script(src='script.js')
+    link(href='https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css', rel='stylesheet')
     link(href='styles.css', rel='stylesheet' Content-Type='text/css')
   body
-    nav
-        a(href='#') logout
-    block content
+    nav(class="navbar" role="navigation" aria-label="main navigation")
 
-    footer#footer
-        p Copyright (c) foobar
+      div(class="container navbar-end")
+        div(class="navbar-item")
+          div(class="buttons level-right")
+            a(class="button is-primary" href="/signup") Sign up
+            a(class="button is-light") Log in
+
+    block content
