--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,75 @@
+html {
+    min-height: 100%;
+    min-width: 100%;
+}
+
 body {
-    background-color: azure;
+    min-height: 100vh;
+    width: 100%;
+    display: block;
+    position: relative;
+}
+
+body::after {
+    content: "";
+    background: url('https://c.stocksy.com/a/bXn700/z9/1858735.jpg') azure no-repeat center center fixed; ;
+    background-size: cover;
+    opacity: 0.2;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+}
+
+.menuIcon {
+    height: 80%;
+    width: 80%;
+    max-height: 220px;
+    max-width: 220px;
+}
+
+.mainMenuDiv {
+    margin: 1em auto;
+    width: 90%;
+    border-radius: 10px;
+    max-width: 50%;
+    background: rgba(72, 102, 60, 0.1);
+}
+
+.labelDiv {
+    padding: 5px;
+    margin-bottom: 1em;
+    border-radius: 10px;
+    background-color: rgba(72, 102, 60, 0.5);
+}
+
+.formBody {
+    margin: 5px;
+    padding: 5px;
+}
+
+.labelGroup {
+    max-width: 95%;
+    display: inline;
+    margin: 1em;
+}
+
+.foodLabel {
+    min-width: 2em;
+    margin: 5px;
+}
+
+.submitItem {
+    margin-top: 1em;
+}
+
+.field {
+    max-width: 60%;
+    margin: 0 auto;
+}
+
+.control {
+    margin: 5px;
 }
