--- a/functions/views/pages/ingredients/index.pug
+++ b/functions/views/pages/ingredients/index.pug
@@ -2,7 +2,7 @@ extends ../../partials/layouts/layout
 
 block content
   h1= heading
-  a(href='./add') Add Ingredients
+  a(href='/api/ingredients/add') Add Ingredients
   div
     each val in ingredients
       p= val.label
