--- a/functions/views/partials/layouts/layout.pug
+++ b/functions/views/partials/layouts/layout.pug
@@ -11,6 +11,7 @@ html
     script(src='script.js')
     link(href='https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css', rel='stylesheet')
     link(href='styles.css', rel='stylesheet' Content-Type='text/css')
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
   body
     nav(class="navbar" role="navigation" aria-label="main navigation")
 
