feat: can choose recipe ingredients/intolerences

--- a/functions/views/pages/ingredients/add-ingredients.pug
+++ b/functions/views/pages/ingredients/add-ingredients.pug
@@ -16,4 +16,5 @@ block content
 
             span(class="file-label") Take a photo…
       br
+      //- used to render the form via client side script after api call
       div(id='foodLabels' class='is-centered')
