--- a/functions/views/index.pug
+++ b/functions/views/index.pug
@@ -8,7 +8,7 @@ block content
       div(class='mainMenuDiv'  href='')
         h2(class='is-size-3') Add ingredients
         img(class='menuIcon' src='https://cdn4.iconfinder.com/data/icons/food-43/709/food_fruit_kitchen_healthy_vegetable_buy_shop_cart-512.png')
-    a(class='menuLink' href='/api/ingredients')
+    a(class='menuLink' href='/api/recipes')
       div(class='mainMenuDiv')
         h2(class='is-size-3') Find Recipes
         img(class='menuIcon' src='https://cdn0.iconfinder.com/data/icons/kitchen-items-5/614/4826_-_Add_Salt-512.png')
