feat: finished doing PWA

--- a/functions/views/pages/ingredients/add-ingredients.pug
+++ b/functions/views/pages/ingredients/add-ingredients.pug
@@ -3,7 +3,7 @@ extends ../../partials/layouts/layout
 block content  
   div(class='container')  
     div(class='container')
-      h1(class='title has-text-centered has-text-primary')= title
+      h1(class='title has-text-centered has-text-primary is-size-1')= title
       if message
         h2= message
       div(class='container')
