--- a/functions/views/pages/recipes/select-ingredients.pug
+++ b/functions/views/pages/recipes/select-ingredients.pug
@@ -1,57 +1,104 @@
 extends ../../partials/layouts/layout
 
 block content
-  h1(class='title has-text-centered')= heading
+  h1(class='title has-text-centered has-text-primary is-size-1')= heading
 
   div(class='addIngredients has-text-centered is-size-5')
-    a(href='/api/ingredients/add' class='has-text-primary	') Add Ingredients
+    a(href='/api/ingredients/add' class='has-text-primary') Add Ingredients
   div(id='ingredientsTable' class='ingredientsList')
     hr
-    form(action='./recipes' method='post' class='formBody labelGroup has-text-centered')
+    h2(class='has-text-centered is-size-5') Select ingredients for a recipe
+    if queryParams
+        p(class='has-text-centered has-text-danger')= queryParams.error
+    form(='./' method='post' class='formBody labelGroup has-text-centered')
         fieldset
             details
                 summary(class='has-text-centered is-size-4') Fridge
                 //- index (i) used here to distinguish between same name values
-                each ingredient, i in ingredients.fridge
-                    div(class='field')
-                        input(type='checkbox' class='control' name=`ingredient`, value=`${ingredient.label}`, id=`fridge${ingredient.label+i}`) 
-                        label(for=`fridge${ingredient.label+i}`)= ingredient.label
-                        |
-                        span(class=ingredient.expiringSoon) #{ingredient.expiryDate}
-        fieldset                
+                table(class='table is-fullwidth has-text-left')
+                    thead
+                        tr
+                            th Item
+                            th expiry
+                            th 
+                        tbody
+                            each ingredient, i in ingredients.fridge
+                                tr
+                                    td
+                                        input(type='checkbox' class='control' name=`ingredient`, value=`${ingredient.label}`, id=`fridge${ingredient.label+i}`) 
+                                        |
+                                        label(for=`fridge${ingredient.label+i}`)= ingredient.label
+                                    td #{ingredient.expiryDate}
+                                    td(class=`${ingredient.expiringSoon}`)
+        fieldset
             details
                 summary(class='has-text-centered is-size-4') Freezer
-                each ingredient, i in ingredients.freezer
-                    div(class='field')
-                        input(type='checkbox' class='control' name=`ingredient`, value=`${ingredient.label}`, id=`freezer${ingredient.label+i}`) 
-                        label(for=`freezer${ingredient.label+i}`)= ingredient.label 
-                        |
-                        span(class=ingredient.expiringSoon) #{ingredient.expiryDate}
-        fieldset    
-            details
-                summary(class='has-text-centered is-size-4') Cupboard            
-                each ingredient, i in ingredients.cupboard
-                    div(class='field')
-                        input(type='checkbox' class='control' name=`ingredient`, value=`${ingredient.label}`, id=`cupboard${ingredient.label+i}`) 
-                        label(for=`cupboard${ingredient.label+i}`)= ingredient.label
-                        |
-                        span(class=ingredient.expiringSoon) #{ingredient.expiryDate}
+                //- index (i) used here to distinguish between same name values
+                table(class='table is-fullwidth has-text-left')
+                    thead
+                        tr
+                            th Item
+                            th expiry
+                            th 
+                        tbody
+                            each ingredient, i in ingredients.freezer
+                                tr
+                                    td
+                                        input(type='checkbox' class='control' name=`ingredient`, value=`${ingredient.label}`, id=`freezer${ingredient.label+i}`) 
+                                        |
+                                        label(for=`freezer${ingredient.label+i}`)= ingredient.label
+                                    td #{ingredient.expiryDate}
+                                    td(class=`${ingredient.expiringSoon}`)
         fieldset
-            details  
+            details
+                summary(class='has-text-centered is-size-4') Cupboard
+                //- index (i) used here to distinguish between same name values
+                table(class='table is-fullwidth has-text-left')
+                    thead
+                        tr
+                            th Item
+                            th expiry
+                            th 
+                        tbody
+                            each ingredient, i in ingredients.cupboard
+                                tr
+                                    td
+                                        input(type='checkbox' class='control' name=`ingredient`, value=`${ingredient.label}`, id=`cupboard${ingredient.label+i}`) 
+                                        |
+                                        label(for=`cupboard${ingredient.label+i}`)= ingredient.label
+                                    td #{ingredient.expiryDate}
+                                    td(class=`${ingredient.expiringSoon}`)
+        fieldset
+            details
                 summary(class='has-text-centered is-size-4') Other
-                each ingredient, i in ingredients.other
-                    div(class='field')
-                        input(type='checkbox' class='control' name=`ingredient`, value=`${ingredient.label}`, id=`other${ingredient.label+i}`) 
-                        label(for=`other${ingredient.label+i}`)= ingredient.label
-                        |
-                        span(class=ingredient.expiringSoon) #{ingredient.expiryDate}
+                //- index (i) used here to distinguish between same name values
+                table(class='table is-fullwidth has-text-left')
+                    thead
+                        tr
+                            th Item
+                            th expiry
+                            th 
+                        tbody
+                            each ingredient, i in ingredients.other
+                                tr
+                                    td
+                                        input(type='checkbox' class='control' name=`ingredient`, value=`${ingredient.label}`, id=`other${ingredient.label+i}`) 
+                                        |
+                                        label(for=`other${ingredient.label+i}`)= ingredient.label
+                                    td #{ingredient.expiryDate}
+                                    td(class=`${ingredient.expiringSoon}`)
+        h2(class='has-text-centered is-size-5') Select any intolerances
         fieldset
             details  
                 summary(class='has-text-centered is-size-4') Intolerances
-                each intolerance in ['Dairy', 'Egg', 'Gluten', 'Grain', 'Peanut', 'Seafood', 'Sesame', 'Shellfish', 'Soy', 'Sulfite', 'Tree Nut', 'Wheat']
-                    div(class='field')
-                        input(type='checkbox' class='control' name=`intolerance`, value=`${intolerance}`, id=`other${intolerance}`) 
-                        label(for=`other${intolerance}`)= intolerance
+                table(class='table is-fullwidth')
+                    tbody
+                        each intolerance in ['Dairy', 'Egg', 'Gluten', 'Grain', 'Peanut', 'Seafood', 'Sesame', 'Shellfish', 'Soy', 'Sulfite', 'Tree Nut', 'Wheat']
+                            tr
+                                td
+                                    input(type='checkbox' class='control' name=`intolerance`, value=`${intolerance}`, id=`other${intolerance}`) 
+                                td
+                                    label(for=`other${intolerance}`)= intolerance
         div(class="field")
             p(class="control has-text-centered")
                 button(class="button is-success" type='submit',value='getRecipes') Get Recipes
