--- a/public/styles.css
+++ b/public/styles.css
@@ -123,6 +123,12 @@ summary {
     border-bottom: 2px solid white;
 }
 
+.used {
+    background:  white;
+    padding: 0.5em;
+    margin: 0 auto;
+}
+
 article {
     background: green;
     position: absolute;
@@ -168,4 +174,36 @@ article {
     height: 20px;
     float: left;
     margin: 0 6px 0 0;
+}
+
+.card {
+    margin: 1em auto;
+    width: 80%;
+    max-width: 400px;
+    border-radius: 50px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.cardImage {
+    border-radius: 50px 50px 0 0;
+    padding: 1em 1em 0 1em;
+}
+
+.cardMedia {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+}
+
+.recipeDetails {
+    display: inline-block;
+}
+
+.recipeContainer {
+    max-width: 600px;
+    display: block;
+    margin: 0 auto;
+    height: auto;
 }
