--- a/functions/views/pages/recipes/select-ingredients.pug
+++ b/functions/views/pages/recipes/select-ingredients.pug
@@ -1,10 +1,10 @@
 extends ../../partials/layouts/layout
 
 block content
-  h1(class='title has-text-centered has-text-primary is-size-1')= heading
+  h1(class='title has-text-centered has-text-info is-size-1')= heading
 
   div(class='addIngredients has-text-centered is-size-5')
-    a(href='/api/ingredients/add' class='has-text-primary') Add Ingredients
+    a(href='/api/ingredients/add' class='has-text-info') Add Ingredients
   div(id='ingredientsTable' class='ingredientsList')
     hr
     h2(class='has-text-centered is-size-5') Select ingredients for a recipe
@@ -101,4 +101,4 @@ block content
                                     label(for=`other${intolerance}`)= intolerance
         div(class="field")
             p(class="control has-text-centered")
-                button(class="button is-success" type='submit',value='getRecipes') Get Recipes
+                button(class="button is-info is-medium is-fullwidth" type='submit',value='getRecipes') Get Recipes
