--- a/functions/views/pages/login.pug
+++ b/functions/views/pages/login.pug
@@ -22,7 +22,7 @@ block content
 
       div(class="field")
         p(class="control has-text-centered")
-          button(class="button is-success" type='submit',value='Sign Up') Login
+          button(class="button is-info" type='submit',value='Sign Up') Login
 
       div(class='container has-text-centered')
         p(class='') Don't have an account?  
