--- a/functions/views/pages/recipes/choose-recipe.pug
+++ b/functions/views/pages/recipes/choose-recipe.pug
@@ -1,10 +1,10 @@
 extends ../../partials/layouts/layout
 
 block content
-  h1(class='title has-text-centered has-text-primary is-size-1')= heading
+  h1(class='title has-text-centered has-text-info is-size-1')= heading
 
   div(class='addIngredients has-text-centered is-size-5')
-    a(href='/api/ingredients/add' class='has-text-primary') Add Ingredients
+    a(href='/api/ingredients/add' class='has-text-info') Add Ingredients
   div(id='ingredientsTable' class='ingredientsList')
     hr
     h2(class='has-text-centered is-size-5') Choose a recipe
