--- a/functions/views/pages/recipes/final-recipe.pug
+++ b/functions/views/pages/recipes/final-recipe.pug
@@ -1,7 +1,7 @@
 extends ../../partials/layouts/layout
 
 block content
-  h1(class='title has-text-centered has-text-primary is-size-1')= heading
+  h1(class='title has-text-centered has-text-info is-size-1')= heading
 
   h2(class='has-text-centered is-size-5')= recipe.title
   p(class='has-text-centered is-size-7 has-text-weight-semibold') Cooking Time: #{recipe.readyInMinutes}mins
@@ -13,9 +13,10 @@ block content
       br
       div
         h2(class='is-size-5 has-text-weight-semibold') Ingredients
-        ul
+        
         each ingredient in recipe.extendedIngredients
-          li #{ingredient.name} (#{ingredient.amount}#{ingredient.unit})
+          ul
+            li #{ingredient.name} (#{ingredient.amount}#{ingredient.unit})
       br
       div(class='has-text-justified')  
         p(class='is-size-5 has-text-weight-semibold') Instructions Summary
