--- a/functions/views/pages/signup.pug
+++ b/functions/views/pages/signup.pug
@@ -24,7 +24,7 @@ block content
 
         div(class="field")
           p(class="control has-text-centered")
-            button(class="button is-success" type='submit',value='Sign Up') Sign Up
+            button(class="button is-info" type='submit',value='Sign Up') Sign Up
 
         div(class='container has-text-centered')
           p(class='') Already have an account?  
