--- a/functions/views/partials/layouts/layout.pug
+++ b/functions/views/partials/layouts/layout.pug
@@ -1,22 +1,38 @@
 doctype html
-html
+html(lang="en")
   head
     title Recipes
-    //- local dev
-    script(src='/script.js')
-    link(href='/styles.css', rel='stylesheet' Content-Type='text/css')
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    //- hosted
-    link(href='https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css', rel='stylesheet')
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="Description" content="A recipe suggestion application">
+    <meta name="theme-color" content="#add8e6">
+    <meta name="msapplication-TileColor" content="#ffc40d">
+
+    <link href='https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link href='/styles.css', rel='stylesheet' Content-Type='text/css'>
+    
+     <!--Favicons-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+    //- <link rel="manifest" href="/images/favicons/site.webmanifest">
+    <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="icon" href="/images/favicons/favicon-32x32.png">
+
+    script(src='/script.js')
+    <link rel="manifest" href="/pwa.webmanifest">
   body
     nav(class="navbar" role="navigation" aria-label="main navigation")
 
       div(class="container navbar-end")
         div(class="navbar-item")
           div(class="buttons level-right")
-            a(class="button is-primary" href="/api/recipes") Recipes
+            a(class="button is-info is-light" href="/api/recipes") Recipes
             a(class="button is-light" href="/api/ingredients") Ingredients
 
     block content
+    <script src="/pwa.js"></script>
+    <script src="/status.js"></script>
+    <script src="/service-worker.js"></script>
