--- a/functions/views/partials/layouts/layout.pug
+++ b/functions/views/partials/layouts/layout.pug
@@ -26,8 +26,8 @@ html(lang="en")
   body
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
-          <img src="https://image.flaticon.com/icons/svg/2729/2729077.svg" width="112" height="28">
+        <a class="navbar-item" href="/">
+          <img src="https://image.flaticon.com/icons/svg/2729/2729077.svg" width="112" height="28" alt='An inventory list and food going into a bowl'>
         </a>
 
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
