--- a/functions/views/pages/ingredients/index.pug
+++ b/functions/views/pages/ingredients/index.pug
@@ -70,20 +70,21 @@ block content
                     td(class=ingredient.expiringSoon)
       details  
         summary(class='has-text-centered is-size-4') Other
-        table(class='table is-hoverable is-fullwidth')
-          thead(class='thead')
-            tr(class='tr')
-              th Ingredient
-              th quantity
-              th location
-              th expiry
-              th
-              tbody(class='tbody')
-                each ingredient, i in ingredients.other
-                  tr
-                    td #{ingredient.label}
-                    td #{ingredient.quantity}
-                    td #{ingredient.location}
-                    td #{ingredient.expiryDate}
-                    td(class=ingredient.expiringSoon)
+        div(class="table-container")
+          table(class='table is-hoverable is-fullwidth')
+            thead(class='thead')
+              tr(class='tr')
+                th Ingredient
+                th quantity
+                th location
+                th expiry
+                th
+                tbody(class='tbody')
+                  each ingredient, i in ingredients.other
+                    tr
+                      td #{ingredient.label}
+                      td #{ingredient.quantity}
+                      td #{ingredient.location}
+                      td #{ingredient.expiryDate}
+                      td(class=ingredient.expiringSoon)
         
