--- a/functions/views/pages/login.pug
+++ b/functions/views/pages/login.pug
@@ -11,11 +11,11 @@ block content
 
       div(class="field")
         p(class="control has-icons-left has-icons-right")
-          input(class="input" id='email' type='text' value='' placeholder='@email' name='email')
+          input(class="input" id='email' type='text' value='' placeholder='@email' name='email' required='true')
 
       div(class="field")
         p(class="control has-icons-left")
-          input(class="input" id='password' type='password' value='' placeholder='password' name='password')
+          input(class="input" id='password' type='password' value='' placeholder='password' name='password' required='true')
       
       if error
           p(class='has-text-centered has-text-danger')= error
